# voice-input-mimo

./: .gitignore  Info.plist  Makefile  Package.swift  README.md
.github/workflows/: pages.yml
Resources/: AppIcon.icns
Sources/VoiceInputMimo/: ASRClient.swift  ASRFailureClassifier.swift  AppDelegate.swift  AudioRecorder.swift  ClipboardArchive.swift  ClipboardHistoryWindow.swift  InputDeviceManager.swift  (+16 more)
docs/: ENGINE-CONCURRENCY.md  GATEWAY-E2E.md  LLM-PREWARM.md  index.html
engine/: __init__.py  adaptive_idle.py  lifecycle.py  logsetup.py  memory.py  qwen_remote.py  server.py
fixtures/: README.md
harness/: README.md  e2e-phase1-20260510-065013.md  e2e-phase1-20260510-110058.md  e2e-phase1-20260510-110155.md  e2e-phase1-20260510-110307.md  refine-prompt-ab-20260510-050340.md  refine-prompt-ab-v11-20260510-050625.md  refine-prompt-store-acceptance-20260510-060353.md  refine-prompt-store-acceptance-revalidate-20260510-092606.md  thresholds.yaml
scripts/: _baseline_meta.py  _phase2_runner.py  bench_latency.py  bench_memory.py  bench_phase2_hard_ceiling.py  bench_phase2_high_freq.py  bench_phase2_qwen_cache.py  bench_phase2_sparse.py  bench_refine_prompt_ab.py  bench_wer.py  build-dmg.sh  build_phase2_report.py  gen_polish_zh_fewshot.py  monitor-invoke.sh  preview-overlay.sh  preview-screenshot.sh  promote_baseline.py  run-engine.sh  seed_golden.py  setup-codesign-cert.sh  test_adaptive_idle.py  test_engine_transcribe_offload.py  test_memory_tracker.py  test_qwen_detect_use.py
server/: pyproject.toml  record_test.sh  run.sh  server.py  test_smoke.sh
(+129 files in other folders)
